--- a/angular-coingecko-api/src/app/app.component.html
+++ b/angular-coingecko-api/src/app/app.component.html
@@ -1,26 +1,27 @@
-<div class="container-fluid border rounded shadow-sm" style="font-family: ABeeZee, sans-serif;text-align: center;font-weight: bold;background: linear-gradient(rgba(111,66,193,0.37), rgba(255,255,255,0.14));border-style: none;box-shadow: inset 0px 0px;">
+<div class="container-fluid border rounded shadow-sm" style="font-family: ABeeZee, sans-serif;text-align: center;background: linear-gradient(rgba(111,66,193,0.37), rgba(255,255,255,0.14));border-style: none;box-shadow: inset 0px 0px; padding: 10px; margin: 10px;"> 
   <div class="row">
-      <div class="col-xs-12">
-          <h1>CoinMarket</h1>
-          <input 
-          class="form-control bg-dark text-light border-0 my-4 text-center" 
-          type="text" 
-          placeholder="Buscar moneda" 
-          autofocus 
-          (keyup)="searchCoin()"
-          [(ngModel)]="searchText"
-        />
+    <div class="col-xs-12">
+      <h1>CoinMarket</h1>
 
-          <table class="table table-dark">
-            <thead>
-              <tr>
-                <td *ngFor="let title of titles">
-                  {{ title }}
-                </td>
-              </tr>
-            </thead>
+      <input
+        type="text"
+        placeholder="Search a Coin"
+        class="form-control bg-dark text-light border-0 my-4 text-center"
+        autofocus
+        (keyup)="searchCoin()"
+        [(ngModel)]="searchText"
+      />
 
-                <tbody>
+      <table class="table table-dark">
+        <thead>
+          <tr>
+            <td *ngFor="let title of titles">
+              {{ title }}
+            </td>
+          </tr>
+        </thead>
+
+        <tbody>
           <tr *ngFor="let coin of filteredCoints; let i = index">
             <td>{{ i + 1 }}</td>
             <td>
@@ -47,8 +48,7 @@
             <td>{{ coin.total_volume.toLocaleString() }}</td>
           </tr>
         </tbody>
-        
-          </table>
-      </div>
+      </table>
+    </div>
   </div>
 </div>
