--- a/angular-coingecko-api/src/app/app.component.html
+++ b/angular-coingecko-api/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid border rounded shadow-sm" style="font-family: ABeeZee, sans-serif;text-align: center;background: linear-gradient(rgba(111,66,193,0.37), rgba(255,255,255,0.14));border-style: none;box-shadow: inset 0px 0px; padding: 10px; margin: 10px;"> 
+<div class="container-fluid border rounded shadow-sm" style="font-family: ABeeZee, sans-serif;text-align: justify;background: linear-gradient(rgba(111,66,193,0.37), rgba(255,255,255,0.14));border-style: none;box-shadow: inset 0px 0px; padding: 10px; margin: 10px; padding: auto; margin: auto;"> 
   <div class="row">
     <div class="col-xs-12">
-      <h1>CoinMarket</h1>
+      <h1>Mercado de Monedas</h1>
 
       <input
         type="text"
