--- a/angular-coingecko-api/src/app/app.component.html
+++ b/angular-coingecko-api/src/app/app.component.html
@@ -5,7 +5,7 @@
 
       <input
         type="text"
-        placeholder="Search a Coin"
+        placeholder="Buscar moneda"
         class="form-control bg-dark text-light border-0 my-4 text-center"
         autofocus
         (keyup)="searchCoin()"
