--- a/angular-coingecko-api/src/app/app.component.html
+++ b/angular-coingecko-api/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid border rounded shadow-sm" style="font-family: ABeeZee, sans-serif;text-align: center; align-items: center;background: linear-gradient(rgba(111,66,193,0.37), rgba(255,255,255,0.14));border-style: none;box-shadow: inset 0px 0px; padding: 10px; margin: 10px; padding: auto; margin: auto;"> 
+<div class="container-fluid container d-flex d-xl-flex flex-column justify-content-center align-items-center align-content-center align-self-center justify-content-xl-center align-items-xl-center border rounded shadow-sm" style="font-family: ABeeZee, sans-serif;text-align: center; align-items: center;background: linear-gradient(rgba(111,66,193,0.37), rgba(255,255,255,0.14));border-style: none;box-shadow: inset 0px 0px; padding: 10px; margin: 10px; padding: auto; margin: auto;"> 
   <div class="row">
     <div class="col-xs-12">
       <h1>Mercado de Monedas</h1>
